--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -53,10 +53,6 @@ nav a {
   margin-bottom: 10px;
 }
 
-.note-name {
-  margin-bottom: 10px;
-}
-
 ul {
   list-style: none;
   margin: 0;
@@ -83,50 +79,6 @@ button {
   flex-direction: column;
   flex-basis: 100%;
   flex: 1;
-}
-
-.btn {
-  background-color: #bbb;
-  border-radius: 5px;
-  border: 1px solid #999;
-  display: inline-block;
-  cursor: pointer;
-  color: #ffffff;
-  font-family: Arial;
-  font-size: 14px;
-  min-height: 33px;
-  padding: 6px 21px;
-  text-decoration: none;
-  margin: 7px;
-}
-
-.btn.btn__geen:hover {
-  background: linear-gradient(to bottom, #77a809 5%, #89c403 100%);
-  background-color: #77a809;
-}
-
-.btn__geen {
-  box-shadow: inset 0px 1px 0px 0px #a4e271;
-  background: linear-gradient(to bottom, #89c403 5%, #77a809 100%);
-  background-color: #89c403;
-  border: 1px solid #74b807;
-}
-
-.btn__red {
-  box-shadow: inset 0px 1px 0px 0px #cf866c;
-  background: linear-gradient(to bottom, #d0451b 5%, #bc3315 100%);
-  background-color: #d0451b;
-  border-color: #942911;
-}
-
-.btn__red:hover {
-  background: linear-gradient(to bottom, #bc3315 5%, #d0451b 100%);
-  background-color: #d0451b;
-}
-
-.btn:active {
-  position: relative;
-  top: 1px;
 }
 
 .field__search {
@@ -180,13 +132,17 @@ input {
   background-color: #f6f9fc;
 }
 
-.done {
-  color: #bbbbbb;
-  text-decoration: line-through;
-}
-
 @media (max-width: 600px) {
   body {
     padding: 10px;
+  }
+}
+
+@media (max-width: 400px) {
+  #app {
+    padding: 10px 5px;
+  }
+  .wrapper {
+    margin: 15px 0;
   }
 }
